# voxtract

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-31-diarization-accuracy-phase1.md  2026-04-04-transcription-quality-optimization.md
docs/superpowers/specs/: 2026-04-04-transcription-quality-optimization-design.md
src/voxtract/: __init__.py  __main__.py  cli.py  config.py  errors.py  formatter.py  models.py  pipeline.py
src/voxtract/audio/: __init__.py  splitter.py  vad.py
src/voxtract/speaker/: __init__.py  diarizer.py
src/voxtract/stt/: __init__.py  base.py  qwen3.py  whisper.py
tests/: test_config_device.py  test_models.py
tests/fixtures/: sample_structured.json  sample_transcript.json
tests/test_audio/: test_splitter.py  test_vad.py
tests/test_pipeline/: test_preconvert.py
tests/test_speaker/: test_diarizer.py  test_split_by_speaker.py  test_word_level_assign.py
tests/test_stt/: test_qwen3.py
